# database-discovery

./: README.md  env.example  pyproject.toml
migration/: 20240130_database_discovery.sql  20240729_database_discovery.sql  README.md  adjust_column_vder1.sql  database_discovery.sql  docker-compose.yml  env.example
migration/config/: mysql.cnf
src/database_discovery/: __main__.py
src/database_discovery/v1/: log.py
src/database_discovery/v1/auth_service/: auth.py
src/database_discovery/v1/scrap_service/database_service/database_dev/: database.py  database_detail_DEV.py  table_detail_DEV.py  table_header_DEV.py  user_database_DEV.py
src/database_discovery/v1/scrap_service/database_service/database_prod/: database_PROD.py  database_detail_PROD.py  table_detail_PROD.py  table_header_PROD.py  user_database_PROD.py
src/database_discovery/v1/scrap_service/instance_service/: instance.py  instance_detail.py
src/database_discovery/v1/scrap_service/project_service/: project.py
