[project]
name = "database_discovery"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dba aladin", email = "dba@aladinbank.id"},
]
dependencies = [
    "dotenv>=0.0.5",
    "pyarrow>=15.0.0",
    "sqlalchemy>=2.0.25",
    "load-dotenv>=0.1.0",
    "pymysql>=1.1.1",
    "pandas>=2.2.0",
    "psycopg2>=2.9.10",
    "pyodbc>=5.1.0",
    "psycopg2-binary>=2.9.9",
    "pymssql>=2.3.1",
    "mysqlclient>=2.2.6",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
